--- a/package.json
+++ b/package.json
@@ -16,43 +16,46 @@
     "deploy": "npm run build:production && gh-pages -d public"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^2.32.12",
-    "gatsby-background-image": "^1.5.1",
-    "gatsby-image": "^2.11.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "babel-plugin-styled-components": "^2.0.2",
+    "gatsby": "^2.32.13",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
-    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-sharp": "^2.14.4",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-json": "^3.3.0",
+    "gatsby-transformer-json": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.1",
     "intersection-observer": "^0.12.0",
-    "prop-types": "^15.7.2",
+    "node-fetch": "^3.1.1",
+    "prop-types": "^15.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
-    "react-intersection-observer": "^8.31.0",
-    "styled-components": "^5.2.3",
-    "styled-components-breakpoint": "^3.0.0-preview.20"
+    "react-intersection-observer": "^8.33.1",
+    "remark-parse": "^10.0.1",
+    "styled-components": "^5.3.3",
+    "styled-components-breakpoint": "^3.0.0-preview.20",
+    "trim": "^0.0.3"
   },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
